# qtile

./: .clang-format  .coveragerc  .deepsource.toml  .dockerignore  .git-blame-ignore-revs  .gitignore  .hgignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .xcffib  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  PACKAGING  README  README.md  README.rst  TODO  TODO.rst  builder.py  conftest.py  design  dev.sh  develop.py  flake.nix  mkdocs.yml  noxfile.py  pyproject.toml  qsh  qtile  qtile-session  (+13 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report.yml  config.yaml  config.yml
.github/workflows/: analysis.yml  ci.yml  flake-check.yml  notify-irc.yml  pr_welcome.yml  pre_commit.yml  release.yml  stale.yml  test-pypy3-7.yml  test_3-7.yml  test_3-8.yml  test_3-9.yml  wheel-tests.yml
contrib/scripts/: openbsd-batterymon.py
debian/: changelog  control  copyright  docs  install  python-qtile.install  python3-qtile.install  qtile.install  rules  watch
debian/patches/: debian-changes-0.5alpha-oneiric3  series
doc-src/: 02-docstyle.css  _README  _cmdobj.html  _configobj.html  _header.html  _hookobj.html  _layout.html  admin.html  api.html  commands.html  configuration.html  dev.html  docstyle.css  faq.html  index.html  index.py  objects.html  qsh.html  scripting.html
doc-src/commands/: commandref.html  index.py  qsh.html  scripting.html
doc-src/configuration/: example.html  groups.html  hooks.html  index.py  keys.html  layouts.html  mouse.html  screens.html
doc-src/objects/: barsngaps.html  groups.html  index.py  layouts.html  screens.html  widgets.html  windows.html
docs/: BUILDING  Makefile  admin.rst  build.sh  conf.py  configuration.rst  development.rst  faq.rst  index.rst  requirements-rtd.txt  requirements.txt  sphinx_lavinder.py  sphinx_qtile.py
docs/_static/: material.css  mkdocstrings.css  split_code.css
docs/_templates/: layout.html  qtile_sidebar.html
docs/man/: lavinder.rst  qsh.rst  qshell.rst  qtile.rst
docs/manual/: changelog.md  contributing.rst  faq.md  faq.rst  hacking.md  hacking.rst  how-to-migrate.md  how-to-migrate.rst  idle.rst  index.rst  license.md  license.rst  releasing.rst  snippets.rst  stacking.rst  troubleshooting.rst  wayland.md  wayland.rst  wayland_status.rst
docs/qtile_docs/: base.py  collapsible.py  commands.py  graph.py  hooks.py  migrations.py  module.py  qtile_class.py
docs/releases/: 0.5.rst  0.6.rst  0.7.0.rst  0.7.rst  index.rst
docs/screenshots/: config.py  screenshot.py  screenshots.py  take_all.py  take_one.py
examples/: cortesi-config.py
examples/config/: bavardage-config.py  config.py  cortesi-config-laptop.py  cortesi-config.py  dgroups.py  roger-config.py  tailhook-config.py
examples/scripts/: minimal-client.py
liblavinder/: __init__.py  bar.py  command.py  config.py  confreader.py  dgroups.py  drawer.py  group.py  hook.py  log_utils.py  notify.py  pango_ffi_build.py  pangocffi.py  scratchpad.py  state.py  utils.py  window.py
liblavinder/core/: manager.py  xcbq.py  xcursors.py  xcursors_ffi_build.py
liblavinder/extension/: __init__.py  base.py  dmenu.py  window_list.py
liblavinder/interactive/: iqshell_install.py  iqshell_kernel.py
liblavinder/layout/: __init__.py  base.py  bsp.py  columns.py  floating.py  matrix.py  ratiotile.py  stack.py  tile.py  tree.py  verticaltile.py  xmonad.py
liblavinder/resources/: default_config.py
liblavinder/scripts/: lavinder.py  lavinder_cmd.py  lavinder_run.py  lavinder_top.py  qshell.py
liblavinder/widget/: backlight.py  base.py  battery.py  canto.py  check_updates.py  (+38 more)
libqtile/: __init__.py  _build_config.py  asyncio_compat.py  bar.py  command.py  command_client.py  command_graph.py  command_interface.py  command_object.py  compat.py  conf.py  config.py  configurable.py  confreader.py  dgroups.py  drawer.py  ffi_build.py  gap.py  group.py  hook.py  images.py  ipc.py  layout.py  lazy.py  log_utils.py  manager.py  notify.py  notify_window.py  obj.py  pane.py  pango_ffi.py  pango_ffi_build.py  pangocffi.py  pep562.py  popup.py  scratchpad.py  sh.py  state.py  theme.py  utils.py  (+6 more)
newdocs/: index.md
nix/: build-config.nix  overlays.nix  qtile.nix
nosetest/: test_bar.py  test_config.py  test_utils.py  utils.py
requirements/: base.txt  dev.txt  docs.txt  format.txt  lint.txt  optional.txt  package.txt  static.txt  test.txt  xcffib.txt
resources/: 99-qtile.rules  README  lavinder.1  lavinder.desktop  objgraph.dot  qsh.1  qshell.1  qtile-session.target  qtile-wayland.desktop  qtile.1  qtile.desktop  qtile.service
rpm/: lavinder.spec  qtile.spec
scripts/: addlicence.sh  check_command_docs  ci-entrypoint  ci-env  ci-run-test  deps  dqtile-cmd  ffibuild  gen-keybinding-img  gen-keybinding-img_fr-be-latin1  gen_api_layouts.py  gen_commands_api_layouts.py  gen_commands_api_widgets.py  genkeysyms  griffe_extensions.py  install-deps  install-qtile  iqshell  macos_check.sh  mkdocs_hooks.py  mocks.py  qtb  requirements.txt  run  run-all-tests  run-coverage  run-macos-tests  run-wl-tests  run-x11-tests  screenshot.py  take-screenshots  take-screenshots.sh  take_all_screenshots.py  ubuntu_wayland_setup  wephyr  xephyr
stubs/: _cffi_backend.pyi  cffi.pyi  curses.pyi  iwlib.pyi  mailbox.pyi  mpd.pyi  pkg_resources.pyi  psutil.pyi  setproctitle.pyi  tracemalloc.pyi
test/: .pry  Dockerfile.test  README  conftest.py  flake8.cfg  helpers.py  macos_window.m  stub.py  test_bar.py  test_check.py  test_command.py  test_command_graph.py  test_config.py  test_configurable.py  test_dgroups.py  test_fakescreen.py  test_floating.py  test_group.py  test_highdpi.py  test_hook.py  test_images.py  test_images2.py  test_ipc.py  test_layout.py  test_manager.py  test_match.py  test_migrate.py  test_popup.py  test_qtile.py  test_qtile_cmd.py  test_qtile_help.py  test_restart.py  test_scratchpad.py  test_serialize.py  test_sh.py  test_swallow.py  test_utils.py  test_when.py  test_widget.py  test_window.py  (+2 more)
(+827 files in other folders)
