[options]
packages = find_namespace:
python_requires >= 3.9
setup_requires =
  cffi >= 1.1.0
  cairocffi[xcb] >= 1.6.0
  setuptools >= 40.5.0
  setuptools_scm >= 3.2.0
install_requires =
  cffi >= 1.1.0
  cairocffi[xcb] >= 1.6.0
  xcffib >= 1.4.0
tests_require =
  flake8
  pep8-naming
  psutil
  coverage

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
  numpydoc
lint =
  flake8
  pep8-naming
  coverage
test =
  pytest >= 6.2.1
  libcst >= 1.0.0
  dbus-next
  PyGObject
ipython =
  ipykernel
  jupyter_console
wayland =
  pywayland>=0.4.14
  xkbcommon>=0.3
  # NOTE: When updating the major or minor version of pywlroots here, also update:
  # tox.ini, docs/manual/install/index.rst, docs/manual/wayland.rst
  pywlroots==0.16.4
widgets =
  dbus-next
  imaplib2
  iwlib
  keyring
  mailbox
  psutil
  pulsectl
  pulsectl_asyncio
  python-mpd2
  pytz
  xdg
  xmltodict
all =
  # All user dependencies i.e. excluding dev deps.
  %(ipython)s
  %(wayland)s
  %(widgets)s
  libcst
  setproctitle

[options.package_data]
libqtile.resources =
    battery-icons/*.png
    layout-icons/*.png

[options.packages.find]
exclude =
    test*

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[flake8]
exclude = libqtile/_ffi*.py,libqtile/backend/x11/_ffi*.py
max-line-length = 98
ban-relative-imports = true
ignore = E203,W503,E704,E123,E226,E121,E24,E126,W504,N818,E501
enable-extensions = G

[check-manifest]
ignore =
    stubs**

[tool:isort]
line_length = 98
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = THIRDPARTY
known_first_party = libqtile,test
include_trailing_comma = true
profile = black

[mypy]
mypy_path = stubs
python_version = 3.11
warn_unused_configs = True
warn_unused_ignores = True
warn_unreachable = True
no_implicit_optional = True
disallow_untyped_defs = False
disable_error_code = method-assign, annotation-unchecked
[mypy-_cffi_backend]
ignore_missing_imports = True
[mypy-cairocffi._generated.ffi]
ignore_missing_imports = True
[mypy-cairocffi.pixbuf]
ignore_missing_imports = True
[mypy-libqtile._ffi_pango]
ignore_missing_imports = True
[mypy-libqtile.backend.wayland._ffi]
ignore_missing_imports = True
[mypy-libqtile.backend.x11._ffi_xcursors]
ignore_missing_imports = True
[mypy-xcffib._ffi]
ignore_missing_imports = True
[mypy-pytest]
ignore_missing_imports = True
[mypy-xkbcommon.*]
ignore_missing_imports = True
[mypy-pywayland.*]
ignore_missing_imports = True
[mypy-wlroots.*]
ignore_missing_imports = True
[mypy-libqtile.backend.wayland.*]
disallow_untyped_defs = True
[mypy-libqtile.backend]
disallow_untyped_defs = True
[mypy-libqtile.bar]
disallow_untyped_defs = True
[mypy-libqtile.core.*]
disallow_untyped_defs = True
[mypy-libqtile.config]
disallow_untyped_defs = True
[mypy-libqtile.layout.base]
disallow_untyped_defs = True
[mypy-libqtile.log_utils]
disallow_untyped_defs = True
[mypy-libqtile.utils]
disallow_untyped_defs = True
