[options]
packages = find_namespace:
python_requires >= 3.10
install_requires =
  cffi >= 1.1.0
  cairocffi[xcb] >= 1.6.0
  xcffib >= 1.4.0
tests_require =
  ruff
  psutil
  coverage

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
  numpydoc
lint =
  ruff
  coverage
test =
  pytest >= 6.2.1
  libcst >= 1.0.0
  dbus-fast
  PyGObject
ipython =
  ipykernel
  jupyter_console
wayland =
  pywayland>=0.4.17
  xkbcommon>=0.3
  # NOTE: When updating the major or minor version of pywlroots here, also update:
  # tox.ini, docs/manual/install/index.rst, docs/manual/wayland.rst, builder.py
  pywlroots==0.17.0
widgets =
  dbus-fast
  imaplib2
  iwlib
  keyring
  mailbox
  psutil
  pulsectl
  pulsectl_asyncio
  python-mpd2
  pytz
  xdg
  xmltodict
all =
  # All user dependencies i.e. excluding dev deps.
  %(ipython)s
  %(wayland)s
  %(widgets)s
  libcst
  setproctitle

[options.package_data]
libqtile.resources =
    battery-icons/*.png
    layout-icons/*.png

[options.packages.find]
exclude =
    test*

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[check-manifest]
ignore =
    stubs**
